--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.7
-MAINTAINER ZhenhaiGao <gaozh1988@live.com>
 
 RUN apk update && apk add ansible openssh sshpass
-RUN mkdir -p /etc/ansible /opt/ansible && rm -rf /var/cache/apk/*
+RUN mkdir -p /etc/ansible /app && rm -rf /var/cache/apk/*
 
-WORKDIR /opt/ansible
+WORKDIR /app
+ENTRYPOINT ["ansible", "--version"]
