--- a/notes/docker/roles/install-docker/templates/docker.service
+++ b/notes/docker/roles/install-docker/templates/docker.service
@@ -1,14 +1,14 @@
 [Unit]
 Description=Docker Application Container Engine
-Documentation=http://docs.docker.com
-After=network.target docker.socket
+Documentation=https://docs.docker.com
+After=network.target firewalld.service
 
 [Service]
 Type=notify
 ExecStart=/usr/bin/dockerd
 ExecReload=/bin/kill -s HUP $MAINPID
 
-LimitNOFILE=infinity
+LimitNOFILE=1500000
 LimitNPROC=infinity
 LimitCORE=infinity
 
