init nginx dockerfile
Signed-off-by: Zhenhai Gao <gaozh1988@live.com>

--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.7
+MAINTAINER Zhenhai Gao <gaozh1988@live.com>
 
 RUN apk update && apk add ansible openssh sshpass
 RUN mkdir -p /etc/ansible /app && rm -rf /var/cache/apk/*
 
 WORKDIR /app
-ENTRYPOINT ["ansible", "--version"]
+CMD ["ansible", "--version"]
